# HIApi

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  extensions.py
backend/app/api/: errors.py
backend/app/api/v1/: __init__.py  health.py
backend/app/models/: __init__.py  base.py  content.py  user.py
backend/app/services/: __init__.py  attribution.py
backend/app/utils/: __init__.py  decorators.py
backend/migrations/: alembic.ini  env.py
backend/scripts/: create_test_user.py  init_db.py
